--- a/prueba..html
+++ b/prueba..html
@@ -14,6 +14,7 @@
     <main>
         <section>
             <p>En la mente pueden pasar muchas cosas, lo increible de esto es saber como la mente crea muchisimas cosas que en la <br/>Vida no estan presentes.</p>
+            <p>Entonces, si sabemos todo estoy, es muy probable que todas las cosas que hayan en tu mente seran poderosas</p>
         </section>
     </main>
 </body>
