--- a/prueba.html
+++ b/prueba.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>El poder de la mente subconsiente</h1>
+        <h2>El lugar donde puedes generar toda la riqueza que deseas</h2>
     </header>
     <main>
         <section>
